--- a/Homepage.css
+++ b/Homepage.css
@@ -107,7 +107,7 @@ body {
     display: block;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 880px) {
     .container {
         padding-left: 30px;
         padding-right: 30px;
@@ -119,6 +119,7 @@ body {
 
 
 .topnav {
+     overflow: hidden;
     background-color: snow;
     border-bottom: solid 2px rgb(252, 53, 101);
     position: fixed;
@@ -155,68 +156,46 @@ body {
     display: none;
 }
 
-.nav-img {
-    padding: 10px;
-}
-
 .logo {
     width: 220px;
     margin: 10px;
     padding: 0 10px;
+    
 
 
 
 }
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+      color: snow;
+    border-top: solid 2px rgb(252, 53, 101);
+  }
 
-@media screen and (max-width: 880px) {
-    .topnav a {
-        display: none;
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-        z-index: 1;
-
-    }
+  .topnav a.icon {
+    float: right;
+    display: block;
+      color: grey;
+      border: none;
+  }
 }
 
-@media screen and (max-width: 880px) {
-    .topnav.responsive {
-        position: relative;
-    }
-
-    .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-        background-color: snow;
-        z-index: 1;
-
-
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: center;
-        font-size: 20px;
-        background-color: #2c292f;
-        z-index: 1;
-
-
-    }
-
-    .topnav.responsive a:default {
-        transition: 0.4s ease;
-    }
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: snow;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    background-color: rgb(42, 40, 46);
+  }
 }
-
-
-
-
 /* || Landing Page */
-
 
 .header {
     text-align: center;
@@ -227,7 +206,7 @@ body {
     background-repeat: no-repeat;
 }
 
-.header-overlay {
+.header .header-overlay {
     text-align: left;
     background-color: rgb(0, 0, 0);
     /* Fallback color */
@@ -236,7 +215,7 @@ body {
 
 }
 
-.header-text {
+.header .header-overlay .header-text {
     padding: 300px 0px 300px;
     color: snow;
 }
@@ -268,7 +247,6 @@ body {
     font-weight: light;
     border-radius: 2px;
     text-align: center;
-    padding: 14px 28px;
     font-size: 16px;
     cursor: pointer;
     width: 200px;
@@ -352,56 +330,45 @@ body {
     fill: white;
 }
 
-/* || About Me */
-
-.intro-row {
-    display: flex;
-}
+/* || Introduction */
 
 .about-me {
     display: block;
     position: relative;
-    padding-bottom: 100;
+    padding-bottom: 50px;
     box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.12);
 }
+
+/* ||| Intro Row */
+
+.about-me .intro-row {
+    display: table;
+    border-spacing: 0px;
 }
 
-.intro-column {
-    flex: 50%;
-    padding: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
+.about-me .intro-row .intro-column-left {
+    display: table-cell;
+    width: 50%;
+    text-align: left;
+    vertical-align: top;
+    padding-top: 30px
 }
 
-.intro-header {
+.about-me .intro-row .intro-column-left .intro-header {
     text-align: left;
     font-size: 60px;
     color: black;
     font-weight: lighter;
     margin: 0px;
-
-
 }
 
-.intro-solid {
-    border: 3px solid black;
-    width: 40px;
-    float: left;
-}
-
-.intro-solid1 {
-    border: 2px solid black;
-    width: 100px;
-}
-
-.intro-text {
+.about-me .intro-row .intro-column-left .intro-text {
     font-size: 25px;
     color: rgb(94, 94, 94);
     font-weight: lighter;
 }
 
-.intro-button {
+.about-me .intro-row .intro-column-left .intro-button {
     border: 0px solid;
     border-bottom: 3px solid black;
     background-color: transparent;
@@ -424,7 +391,7 @@ body {
         0
 }
 
-.intro-button:hover {
+.about-me .intro-row .intro-column-left .intro-button:hover {
     border-bottom: 10px solid black;
     transition: border 0.7s ease-in;
     transition: background-color 0.7s ease-in;
@@ -434,54 +401,50 @@ body {
     transition: color 0.4s ease-out;
 }
 
-.intro-card {
-    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-        0 12.5px 10px rgba(0, 0, 0, 0.06),
-        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-        0 100px 80px rgba(0, 0, 0, 0.12);
+.about-me .intro-row .intro-column-right {
+    display: table-cell;
+    width: 50%;
+    text-align: center;
 }
 
-.intro-logos {
-    width: 50px
-}
-
-.intro-img {
-    width: 400px;
+.about-me .intro-row .intro-column-right .intro-img {
+    width: 450px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 @media screen and (max-width: 880px) {
-    .intro-img {
-        display: none;
+    .about-me .intro-row {
+        display: grid;
     }
-}
 
-@media screen and (max-width: 880px) {
-    .intro-text {
+    .about-me .intro-row .intro-column-right {
+        width: 100%;
+    }
+
+    .about-me .intro-row .intro-column-right .intro-img {
+        display: none
+    }
+
+    .about-me .intro-row .intro-column-left {
+        width: 100%;
+        padding: 0px;
+    }
+
+    .about-me .intro-row .intro-column-left .intro-header {
+        font-size: 40px;
+    }
+
+    .about-me .intro-row .intro-column-left .intro-text {
         font-size: 20px;
     }
 
-}
-
-@media screen and (max-width: 880px) {
-    .intro-header {
-        font-size: 40px;
-
-    }
-}
-
-@media screen and (max-width: 880px) {
-    .intro-button {
+    .about-me .intro-row .intro-column-left .intro-button {
         display: block;
         margin-bottom: 30px;
     }
 }
-
-
 
 /* || Key Skills Dropdown */
 .skills {
@@ -492,17 +455,11 @@ body {
     background-color: #e76f51;
 }
 
-.skills-head {
-    margin: 0px;
-    padding-top: 10px;
-
-}
-
-.skills-row {
+.skills .skills-row {
     display: flex;
 }
 
-.skills-column {
+.skills .skills-row .skills-column {
     flex: 33%;
     padding: 10px;
     color: white;
@@ -512,7 +469,7 @@ body {
 
 }
 
-.skills-box {
+.skills .skills-row .skills-column .skills-box {
     position: block;
     width: 250px;
     height: 300px;
@@ -535,16 +492,26 @@ body {
     transition: 0.5s ease;
 }
 
-.skills-box:hover {
+.skills .skills-row .skills-column .skills-box:hover {
     transform: translateY(-10px);
 }
 
-.skills-img {
+.skills-head {
+    margin: 0px;
+    padding-top: 10px;
+
+}
+
+.skills .skills-row .skills-column .skills-box .skills-img {
     width: 90px;
 }
 
+.skills .skills-row .skills-column .skills-box .skills-head {
+    margin: 0px;
+    padding-top: 10px;
+}
 
-.skills-button {
+.skills .skills-row .skills-column .skills-box .skills-button {
     font-size: 16px;
     cursor: pointer;
     width: 100px;
@@ -553,7 +520,7 @@ body {
     border: 0px;
 }
 
-.skills-button-1 {
+.skills .skills-row .skills-column .skills-box .skills-button-1 {
     font-size: 16px;
     cursor: pointer;
     width: 100px;
@@ -562,7 +529,7 @@ body {
     border: 0px;
 }
 
-.skills-button-2 {
+.skills .skills-row .skills-column .skills-box .skills-button-2 {
     font-size: 16px;
     cursor: pointer;
     width: 100px;
@@ -571,25 +538,24 @@ body {
     border: 0px;
 }
 
-.skills-button:hover {
+.skills .skills-row .skills-column .skills-box .skills-button:hover {
     color: #e63946;
     transition: 0.4s ease;
 }
 
-.skills-button-1:hover {
+.skills .skills-row .skills-column .skills-box .skills-button-1:hover {
     color: #457b9d;
     transition: 0.4s ease;
 }
 
-.skills-button-2:hover {
+.skills .skills-row .skills-column .skills-box .skills-button-2:hover {
     color: #f4a261;
     transition: 0.4s ease;
 }
 
 @media screen and (max-width: 880px) {
 
-    .skills-row,
-    .skills-column {
+    .skills .skills-row {
         display: block;
         width: 100%;
         padding-top: 20px;
@@ -598,7 +564,7 @@ body {
 }
 
 @media screen and (max-width: 880px) {
-    .skills-box {
+    .skills .skills-row .skills-column .skills-box {
 
         flex: 33%;
     }
@@ -616,7 +582,7 @@ body {
 
 }
 
-.folio-overlay {
+.folio .folio-overlay {
     text-align: left;
     background-color: rgb(0, 0, 0);
     /* Fallback color */
@@ -624,39 +590,8 @@ body {
     background-color: cover;
 }
 
-.folio-row {
-    display: flex;
-}
 
-.folio-column {
-    flex: 33%;
-    padding: 10px;
-    color: white;
-    text-align: center;
-    padding-bottom: 50px
-}
-
-.folio-box {
-    background-color: rgb(42, 42, 46);
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid rgb(42, 42, 46);
-    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-        0 12.5px 10px rgba(0, 0, 0, 0.06),
-        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-        0 100px 80px rgba(0, 0, 0, 0.12);
-}
-
-.folio-box:hover {
-    -ms-transform: scale(1.02);
-    -webkit-transform: scale(1.02);
-    transform: scale(1.02);
-    transition: 0.5s ease;
-}
-
-.folio-head {
+.folio .folio-overlay .folio-head {
     padding: 10px 0px 0px;
     font-size: 20px;
     color: white;
@@ -665,67 +600,78 @@ body {
     font-weight:
 }
 
-.folio-solid {
+.folio .folio-overlay .folio-solid {
     border: 1px solid white;
     width: 60px;
     text-align: center;
 }
 
-.folio-img {
+.folio .folio-overlay .folio-row {
+    display: table;
+    border-spacing: 0;
+}
+
+.folio .folio-overlay .folio-row .folio-column {
+    width: 33%;
+    display: table-cell;
+    padding: 10px;
+    color: white;
+    padding-bottom: 50px;
+    vertical-align: top;
+    text-align: center;
+  
+}
+
+.folio .folio-overlay .folio-row .folio-column .folio-box {
+    background-color: rgb(42, 42, 46);
+    padding-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
+}
+
+.folio .folio-overlay .folio-row .folio-column .folio-box:hover {
+    -ms-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+    transition: 0.5s ease;
+}
+
+.folio .folio-overlay .folio-row .folio-column .folio-box .folio-img  {
     width: 400px;
     padding-bottom: 8px;
 }
 
-.folio-text {
+.folio .folio-overlay .folio-row .folio-column .folio-box .folio-text {
     color: snow;
     font-weight: bold;
     margin: 0px;
 }
 
-.folio-button {
-    display: block;
-    width: 100%;
-    border: none;
-    background-color: rgb(42, 42, 46);
-    padding: 4px 8px;
-
-    font-size: 18px;
-    cursor: pointer;
-    text-align: center;
-    font-weight: bold;
-    color: white;
-    transition: background 0.4s ease
-}
-
-.folio-button:hover {
-    background-color: mediumturquoise;
-    color: black;
-    transition: border 0.7s ease;
-    transition: background-color 0.7s ease;
-    transition: color 0.4s ease;
-    transition: border 0.7s ease-out;
-    transition: background-color 0.7s ease-out;
-    transition: color 0.4s ease-out;
-}
-
 @media screen and (max-width: 880px) {
-
-    .folio-row,
-    folio-column,
-    .folio-img {
-        display: block;
+    
+    .folio .folio-overlay .folio-head {
+        font-size: 15px;
+    }
+    
+    .folio .folio-overlay .folio-row {
+        display: grid;
+    }
+    
+    .folio .folio-overlay .folio-row .folio-column {
+        width: 100%;
+    }
+    
+    .folio .folio-overlay .folio-row .folio-column .folio-box .folio-img {
+        display: grid;
         width: 100%;
         text-align: center;
     }
 }
-
-@media screen and (max-width: 880px) {
-    .folio-head {
-        font-size: 15px;
-
-    }
-}
-
 /* || Footer */
 
 footer {
