--- a/ProductPage.css
+++ b/ProductPage.css
@@ -71,12 +71,24 @@ body {
     padding-left: 300px;
     padding-right: 300px;
 }
+
+.intro-container {
+    padding-left: 300px;
+    padding-right: 300px;
+}
 .section {
     display: block;
 }
 
 @media screen and (max-width: 880px) {
-    .container {
+    .intro-container  {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media screen and (max-width: 880px) {
+    .container  {
         padding-left: 30px;
         padding-right: 30px;
     }
@@ -86,8 +98,9 @@ body {
 
 
 .topnav {
-  background-color: snow;
-    border-bottom: solid 2px rgb(252,53,101);
+     overflow: hidden;
+    background-color: snow;
+    border-bottom: solid 2px rgb(252, 53, 101);
     position: fixed;
     top: 0;
     width: 100%;
@@ -97,76 +110,69 @@ body {
 }
 
 .topnav a {
-  float: right;
-  display: block;
-  color: grey;
-  text-align: center;
-  padding: 21px 50px;
-  text-decoration: none;
-  font-size: 17px;
-    
-    
-       
+    float: right;
+    display: block;
+    color: grey;
+    text-align: center;
+    padding: 21px 50px;
+    text-decoration: none;
+    font-size: 17px;
+
+
+
 }
 
 .topnav a:hover {
-  color: rgb(252,53,101);
+    color: rgb(252, 53, 101);
     transition: 0.4s ease;
 }
 
 .topnav a.active {
-  color: rgb(252,53,101);
+    color: rgb(252, 53, 101);
 }
 
 .topnav .icon {
-  display: none;
+    display: none;
 }
-.nav-img {
-    padding: 10px;
-}  
+
 .logo {
     width: 220px;
     margin: 10px;
     padding: 0 10px;
     
 
-    
-}
 
-@media screen and (max-width: 880px) {
-  .topnav a {display: none;}
+
+}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+      color: snow;
+    border-top: solid 2px rgb(252, 53, 101);
+  }
+
   .topnav a.icon {
     float: right;
     display: block;
-      z-index: 1;
-      
+      color: grey;
+      border: none;
   }
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
     background-color: snow;
-      z-index: 1;
-      
-      
   }
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: center;
-    font-size: 20px;
-    background-color: #2c292f;
-      z-index: 1;
-      
-      
+    text-align: left;
+    background-color: rgb(42, 40, 46);
   }
-  .topnav.responsive a:default{
-      transition: 0.4s ease;
-}    
 }
 
 /* || Landing Page */
@@ -315,31 +321,27 @@ body {
 
 /* ||| Row */
 
-.intro-content {
-    
-}
-
-.intro-content .intro-row {
-    display: flex;
-
-    
-}
-.intro-content .intro-row .intro-column-left {
-    flex 50%;
-    padding-right: 100px;
-    padding-bottom: 40px;
+.intro-row {
+    display: table;
+    border-spacing: 0;
 
 }
 
-.intro-content .intro-row .intro-column-right {
-    flex: 50%;
-    padding-right: 100px;
-    padding-bottom: 40px;
-
+.intro-row .intro-column-left {
+    width: 50%;
+    display: table-cell;
+    text-align: left;
+    padding: 0px 80px 0px 0px;
+    vertical-align: top;
+  
 }
 
+.intro-row .intro-column-right {
+    width: 50%;
+    display: table-cell;
 
-.intro-content .intro-row .intro-column-left .intro-column-header {
+}
+.intro-content .intro-row .intro-column-left  .intro-column-header {
     color: rgb(252,53,101);
     margin: 0px
 }
@@ -352,7 +354,38 @@ body {
     color: rgb(252,53,101);
 }
 
+.intro-content .intro-row .intro-column-right .intro-vid {
+    position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+    
 
+}
+
+ .intro-content .intro-row .intro-column-right .intro-vid .intro-vid-iframe {
+  position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+     
+}
+
+@media screen and (max-width:880px) {
+     .intro-row  {
+        display: grid     
+    }
+    
+    .intro-row .intro-column-left {
+        width: 100%;
+        padding: 0px;
+    }
+    .intro-row .intro-column-right {
+        width: 100%;
+        margin-top: 20;
+        padding-bottom: 20px
+    }
+}
 
 
 
@@ -389,26 +422,69 @@ body {
     float: left;
 }
 
+.con-line {
+    border: 1px solid rgb(252,53,101);
+    text-align: left;
+    margin-top: 20px;
+}
+
 /* ||| Media Row */
 
-.con-how .con-overlay .con-column-left,
-.con-how .con-overlay .con-column-right {
-    display: inline-block;
+.con-media {
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+.con-media .con-row {
+    display: table;
+    border-spacing: 0px;
+}
+
+.con-media .con-row .con-column-left {
+    width: 50%;
+    display: table-cell;
+    text-align: left;
+    padding: 0px 80px 0px 0px;
     vertical-align: top;
-    
 }
 
-.con-how .con-overlay .con-column-left {
+.con-media .con-row .con-column-right {
+    display: table-cell;
     width: 50%;
+    text-align: center;
+}
+.con-media .con-row .con-column-right .con-vid {
+    position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+
+.con-media .con-row .con-column-right .con-vid .con-vid-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width:880px) {
+    .con-media .con-row {
+        display: grid;    
+    }
+    .con-media .con-row .con-column-left {
+        width: 100%;
+        padding: 0px;
+        
+    }
+    .con-media .con-row .con-column-right {
+        width: 100%;
+        padding: 10px 0px 0px 0px;
+        
+    }
+    
     
     
 }
-
-.con-how .con-overlay .con-column-right {
-    width: 50%;
-    
-}
-
 
 
 /* ||| Text Box */
@@ -445,16 +521,17 @@ body {
 
 /* ||| Ending Video */
 
-.con-how .con-overlay .con-end-vid iframe {
+.con-how .con-overlay .con-end-vid .con-end-vid-iframe {
     position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+    padding-top: 30px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
 }
 
-.con-how .con-overlay .con-end-vid {
+.con-how .con-overlay .con-end-vid  {
     position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
