New Wepages and Text Edits
Personalised Text Edits
SubCategory Webpages
New Nav Bar

--- a/Homepage.css
+++ b/Homepage.css
@@ -512,6 +512,11 @@ body {
     padding-top: 10px;
 }
 
+.skills .skills-row .skills-column .skills-box .skills-text {
+    padding: 0px 20px 0px 20px;
+    
+}
+
 .skills .skills-row .skills-column .skills-box .skills-button {
     font-size: 16px;
     cursor: pointer;
