--- a/Homepage.css
+++ b/Homepage.css
@@ -224,7 +224,6 @@ body {
 .header-text-1 {
     font-size: 25px;
     margin: 0px;
-    font-weight: lighter;
     color: rgb(252, 53, 101);
 
 }
@@ -359,14 +358,14 @@ body {
     text-align: left;
     font-size: 60px;
     color: black;
-    font-weight: lighter;
+    font-weight: 400;
     margin: 0px;
 }
 
 .about-me .intro-row .intro-column-left .intro-text {
     font-size: 25px;
     color: rgb(94, 94, 94);
-    font-weight: lighter;
+    font-weight: 500;
 }
 
 .about-me .intro-row .intro-column-left .intro-button {
@@ -670,7 +669,7 @@ body {
     font-size: 40px;
     font-weight: bold;
     position: absolute;
-    font-weight: lighter;
+    font-weight: 400;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
