--- a/Sub-Categorys/ProductPage.css
+++ b/Sub-Categorys/ProductPage.css
@@ -300,7 +300,7 @@ body {
 }
 
 .intro-header .intro-header-2 {
-    font-weight: 200;
+    font-weight: 400;
     font-size: 0.5em;
     line-height: 1.12;
     margin: 10px 0px 15px;
@@ -358,6 +358,13 @@ body {
     position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
+    box-shadow:  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+                  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+                  0 12.5px 10px rgba(0, 0, 0, 0.06),
+                  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+                  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+                  0 100px 80px rgba(0, 0, 0, 0.12);
+    
     
 
 }
@@ -457,6 +464,12 @@ body {
     position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
+         box-shadow:  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+                  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+                  0 12.5px 10px rgba(0, 0, 0, 0.06),
+                  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+                  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+                  0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 .con-media .con-row .con-column-right .con-vid .con-vid-iframe {
@@ -535,6 +548,12 @@ body {
     position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
+    box-shadow:  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+                  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+                  0 12.5px 10px rgba(0, 0, 0, 0.06),
+                  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+                  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+                  0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 /* || Seperator */
