--- a/Coming_Soon.css
+++ b/Coming_Soon.css
@@ -99,14 +99,22 @@ body {
 }
 
 .container {
-
     padding-left: 300px;
     padding-right: 300px;
+
 }
 
 .section {
     display: block;
 }
+
+@media screen and (max-width: 1024px) {
+    .container {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
 
 @media screen and (max-width: 880px) {
     .container {
@@ -115,92 +123,6 @@ body {
     }
 }
 
-
-/* || NavBar */
-
-
-.topnav {
-    overflow: hidden;
-    background-color: snow;
-    border-bottom: solid 2px rgb(252, 53, 101);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    display: block;
-    transition: top 0.3s ease;
-    z-index: 1;
-}
-
-.topnav a {
-    float: right;
-    display: block;
-    color: grey;
-    text-align: center;
-    padding: 21px 50px;
-    text-decoration: none;
-    font-size: 17px;
-
-
-
-}
-
-.topnav a:hover {
-    color: rgb(252, 53, 101);
-    transition: 0.4s ease;
-}
-
-.topnav a.active {
-    color: rgb(252, 53, 101);
-}
-
-.topnav .icon {
-    display: none;
-}
-
-.logo {
-    width: 220px;
-    margin: 10px;
-    padding: 0 10px;
-
-
-
-
-}
-
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {
-        display: none;
-        color: snow;
-        border-top: solid 2px rgb(252, 53, 101);
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-        color: grey;
-        border: none;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .topnav.responsive {
-        position: relative;
-    }
-
-    .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-        background-color: snow;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-        background-color: rgb(42, 40, 46);
-    }
-}
 
 /* || Landing Page */
 
@@ -223,9 +145,8 @@ body {
 }
 
 .header .header-overlay .header-text {
-    padding: 200px 0px 300px;
+    padding: 200px 0px 200px 0px;
     color: snow;
-    text-align: 
 }
 
 .header-text-2 {
@@ -265,8 +186,8 @@ body {
 }
 
 .header-btn:hover {
-    background-color: #457b9d;
-    border: 2px solid #457b9d;
+    background-color: rgb(252, 53, 101);
+    border: 2px solid rgb(252, 53, 101);
     border-radius: 2px;
     transition: border 0.7s ease;
     transition: background-color 0.7s ease;
@@ -283,49 +204,44 @@ body {
     padding: 10px;
 }
 
-.countdown {
-    text-align: center;
-    font-size: 60px;
+#countdown {
+    font-size: 25px;
     margin-top: 0px;
     color: snow;
+     position: relative;
+    
+
+
 }
 li {
   display: inline-block;
-  font-size: 1.5em;
   list-style-type: none;
   padding: 1em;
   text-transform: uppercase;
-    color: 
+
 }
 
 li span {
   display: block;
   font-size: 4.5rem;
+    text-align: center;
 }
 
-@media all and (max-width: 768px) {
-  h1 {
-    font-size: 1.5rem;
-  }
-  
-  li {
-    font-size: 1.125rem;
-    padding: 0rem;
-      text-align: center;
-  }
-  
-  li span {
-    font-size: 3.375rem;
-      text-align: center;
-  }
+.logo {
+    display: inline-block;
+    width: 300px;
+    text-align: center;
+    padding-top: 150px;
+    
 }
 
 @media screen and (max-width: 880px) {
     .header-btn {
-        
-       
-        text-align: center;
-        margin:0.4em auto;
+    
+    text-align: center;
+    margin: 0.2em auto;
+    width: 130px;
+    height: 50px;
     }
 }
 
@@ -333,14 +249,54 @@ li span {
 
     .header-text-1,
     .header-text-3 {
+        padding: 15px;
         font-size: 20px;
         text-align:  center;
     }
 }
 
 @media screen and (max-width: 880px) {
+.header .header-overlay
+    .header-text {
+        
+        padding: 120px 0px 120px 0px;
+
+        
+        
+    }
+
+
+@media screen and (max-width: 880px) {
     .header-text-2 {
-        font-size: 50px;
+        font-size: 40px;
 
     }
 }
+
+@media screen and (max-width: 880px) {
+    
+    .logo {
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+        padding-top: 30px
+    }
+}
+@media all and (max-width: 880px) { 
+
+    #countdown {
+        text-align: center;
+        right: 5%;
+        
+    }
+    
+  li {
+    font-size: 10px;
+    padding: .75rem;
+  }
+  
+  li span {
+    font-size: 40px;
+  }
+}
+    
