--- a/Sub-Categorys/Sub_Category.css
+++ b/Sub-Categorys/Sub_Category.css
@@ -99,7 +99,6 @@ body {
 .topnav {
      overflow: hidden;
     background-color: snow;
-    border-bottom: solid 2px rgb(252, 53, 101);
     position: fixed;
     top: 0;
     width: 100%;
@@ -109,11 +108,12 @@ body {
 }
 
 .topnav a {
+     border-bottom: solid 3px snow;
     float: right;
     display: block;
     color: grey;
     text-align: center;
-    padding: 21px 50px;
+    padding: 21px 60px;
     text-decoration: none;
     font-size: 17px;
 
@@ -123,7 +123,8 @@ body {
 
 .topnav a:hover {
     color: rgb(252, 53, 101);
-    transition: 0.4s ease;
+    border-bottom: 3px solid rgb(252, 53, 101);
+    transition: 0.2s ease;
 }
 
 .topnav a.active {
@@ -138,15 +139,17 @@ body {
     width: 220px;
     margin: 10px;
     padding: 0 10px;
+    
 
 
 
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 880px) {
   .topnav a:not(:first-child) {
     display: none;
       color: snow;
     border-top: solid 2px rgb(252, 53, 101);
+           border: none;
   }
 
   .topnav a.icon {
@@ -157,7 +160,7 @@ body {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 880px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -237,8 +240,8 @@ body {
                   0 100px 80px rgba(0, 0, 0, 0.12);
 }
 .header .header-overlay .header-text .header-btn:hover {
-    background-color: #457b9d;
-    border: 2px solid #457b9d;
+    background-color: rgb(252, 53, 101);
+    border: 2px solid rgb(252, 53, 101);
     border-radius: 2px;
     transition: border 0.7s ease;
     transition: background-color 0.7s ease;
@@ -395,6 +398,81 @@ body {
     background-color: rgb(39,38,43);
     padding: 15px; 
 }
+
+/* || Further Info */
+
+.cls-2 {
+    fill: rgb(39,38,43);
+}
+
+.further {
+    background-color: rgb(39,38,43);
+    text-align: center;
+    margin: 0px;
+}
+
+.further .further-text {
+    color: snow;
+    text-align: center;
+    font-size: 32px;
+    padding-bottom: 25px;
+    margin: 0;
+   
+}
+.further .further-button {
+    border: 2px solid white;
+    background-color: transparent;
+    color: white;
+    font-weight: light;
+    border-radius: 2px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    width: 200px;
+    height: 50px;
+    transition: border 0.7s ease;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
+    
+}
+
+.further .further-button:hover {
+    background-color: rgb(252,53,101);
+    border: 2px solid rgb(252,53,101);
+    border-radius: 2px;
+    transition: border 0.7s ease;
+    transition: background-color 0.7s ease;
+    transition: border 0.7s ease-out;
+    transition: background-color 0.7s ease-out;
+}
+
+.further .further-text-con {
+    color: snow;
+    text-align: center;
+    font-size: 20px;
+    padding: 40px 40px 150px 40px;
+    margin: 0px;
+}
+
+@media screen and (max-width:1024px) {
+    .further .further-text-con {
+        font-size: 28px;
+        padding: 40px 20px;
+    }
+}
+
+
+@media screen and (max-width:880px) {
+    .further .further-text-con {
+        font-size: 18px;
+        padding: 40px;
+    }
+}
+
 
 /* || Footer */
 
