--- a/Homepage.css
+++ b/Homepage.css
@@ -13,6 +13,7 @@
     align-items: center;
     transition: opacity 3s ease-out;
     z-index: 1
+    
 }
 
 .loader {
@@ -76,13 +77,12 @@
     }
 }
 
+
+
+
 #myDiv {
     display: none;
 }
-
-
-
-
 
 /* || General CSS */
 
@@ -135,6 +135,7 @@ body {
     display: block;
     transition: top 0.3s ease;
     z-index: 1;
+    font-weight: 400;
 }
 
 .topnav a {
@@ -235,6 +236,12 @@ body {
     font-size: 25px;
     margin: 0px;
     color: rgb(252, 53, 101);
+    -webkit-animation: fadeInDown 1s;
+    -moz-animation: fadeInDown 1s; /* Firefox < 16 */
+        -ms-animation: fadeInDown 1s; /* Internet Explorer */
+         -o-animation: fadeInDown 1s; /* Opera < 12.1 */
+            animation: fadeInDown 1s;
+    animation-fill-mode: both;
 
 }
 
@@ -242,15 +249,91 @@ body {
     font-size: 80px;
     margin: 0px;
     font-weight: bold;
+    -webkit-animation: fadeInDown 1s;
+    -moz-animation: fadeInDown 1s; /* Firefox < 16 */
+        -ms-animation: fadeInDown 1s; /* Internet Explorer */
+         -o-animation: fadeInDown 1s; /* Opera < 12.1 */
+            animation: fadeInDown 1s;
+    animation-fill-mode: both;
 }
+
+@keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-40px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-moz-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-webkit-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-o-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-ms-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
 
 .header-text-3 {
     font-size: 25px;
     margin: 0px;
     color: rgb(252, 53, 101);
+    -webkit-animation: fadeInUp 1s;
+    -moz-animation: fadeInUp 1s; /* Firefox < 16 */
+        -ms-animation: fadeInUp 1s; /* Internet Explorer */
+         -o-animation: fadeInUp 1s; /* Opera < 12.1 */
+            animation: fadeInUp 1s;
+    animation-fill-mode: both;
 }
 
 .header-btn {
+    text-decoration: none;
     border: 2px solid white;
     background-color: transparent;
     color: white;
@@ -270,6 +353,12 @@ body {
         0 22.3px 17.9px rgba(0, 0, 0, 0.072),
         0 41.8px 33.4px rgba(0, 0, 0, 0.086),
         0 100px 80px rgba(0, 0, 0, 0.12);
+    -webkit-animation: fadeInUp 1s;
+    -moz-animation: fadeInUp 1s; /* Firefox < 16 */
+        -ms-animation: fadeInUp 1s; /* Internet Explorer */
+         -o-animation: fadeInUp 1s; /* Opera < 12.1 */
+            animation: fadeInUp 1s;
+    animation-fill-mode: both;
 }
 
 .header-btn:hover {
@@ -280,6 +369,68 @@ body {
     transition: background-color 0.7s ease;
     transition: border 0.7s ease-out;
     transition: background-color 0.7s ease-out;
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(40px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-moz-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-webkit-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-o-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-ms-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    } 
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
 }
 
 .header-row {
@@ -415,6 +566,7 @@ body {
     display: table-cell;
     width: 50%;
     text-align: center;
+    vertical-align:middle; 
 }
 
 .about-me .intro-row .intro-column-right .intro-img {
@@ -458,11 +610,12 @@ body {
 
 /* || Key Skills Dropdown */
 .skills {
-    z-index: -1;
     overflow: hidden;
-    max-height: 0;
+   
     transition: max-height 0.5s ease-out;
     background-color: rgb(231,61,73);
+    
+    
 }
 
 .skills .skills-row {
@@ -570,19 +723,20 @@ body {
 
 @media screen and (max-width: 880px) {
 
+    .skills {
+        padding: 0px;
+        margin: 0px;
+        
+    }
+    
+    
     .skills .skills-row {
-        display: block;
-        width: 100%;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-}
+      display: table-cell;
+    align-content: cente;
 
-@media screen and (max-width: 880px) {
-    .skills .skills-row .skills-column .skills-box {
-
-        flex: 33%;
+     
     }
+    
 
 }
 
@@ -590,7 +744,9 @@ body {
 
 .seperator-info {
     background-color: snow;
-    padding: 50px; 
+    padding: 50px;
+    box-shadow: 0px 8px 8px 8px rgba(0, 0, 0, 0.12);
+    
 }
 
 
@@ -598,45 +754,52 @@ body {
 
 .folio {
     background-color: snow;
-    text-align: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding-bottom: 70px;
 
+    
 }
 
 
 
 .folio .folio-head {
-    padding: 10px 0px 0px;
+    padding: 10px 10px 10px 10px;
     font-size: 20px;
-    color: black;
-    font: lato;
+    color: #333333;
     text-align: center;
 }
 
 .folio .folio-solid {
     border: 1px solid white;
-    width: 800px;
+    width: 60px;
     text-align: center;
+    
 }
 
 .folio .folio-row {
     display: table;
-    border-spacing: 0;
+    width: 33%;
+    border-spacing: 11;
 }
 
 .folio .folio-row .folio-column {
-    width: 33%;
     display: table-cell;
-    padding: 10px;
-    color: white;
+    padding: 20px;
     padding-bottom: 50px;
     vertical-align: top;
-    text-align: center;
-  
+}
+
+.folio .folio-row .folio-column .folio-link {
+    text-decoration: none;
 }
 
 .folio .folio-row .folio-column .folio-box {
-    position: relative;
-    background-color: rgb(42, 42, 46);
+    background-color: snow;
+    padding-bottom: 10px;
+    border-radius: 5px;
     box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
         0 6.7px 5.3px rgba(0, 0, 0, 0.048),
         0 12.5px 10px rgba(0, 0, 0, 0.06),
@@ -658,42 +821,25 @@ body {
     
 }
 
-.folio .folio-row .folio-column .folio-box .folio-img-overlay  {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.7);
-    background-color: cover;
-    
-    
-}
-.folio .folio-row .folio-column .folio-box  .folio-img-overlay .folio-text {
-    color: snow;
-    font-size: 40px;
+.folio .folio-row .folio-column .folio-box .folio-text-header {
+    color: black;
+    padding-left: 17px;
     font-weight: bold;
-    position: absolute;
-    font-weight: 400;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-    
 }
 
-.folio .folio-row .folio-column .folio-box:hover .folio-img-overlay {
-    opacity: 1;
-   
+.folio .folio-row .folio-column .folio-box .folio-text {
+    color: black;
+
+    padding-left: 20px;
+    font-weight: 400px
 }
+.folio .folio-row .folio-column .folio-box .folio-text-require {
+    color: grey;
+    padding-left: 20px;
+    font-weight: 400px;
+    font-size: 12px
+}
+
 @media screen and (max-width: 1024px) {
     
     .folio .folio-head {
@@ -702,11 +848,12 @@ body {
     }
     
     .folio .folio-row {
-        display: grid;
+        display: table-cell;
     }
     
     .folio .folio-row .folio-column {
-        width: 100%;
+       
+        
     }
     
     .folio .folio-row .folio-column .folio-box .folio-img {
@@ -724,12 +871,13 @@ body {
     }
     
     .folio .folio-row {
-        display: grid;
-        left: 50
+        display: table-cell;
+    
     }
     
     .folio .folio-row .folio-column {
-        width: 100%;
+        display: grid;
+
     }
     
     .folio .folio-row .folio-column .folio-box .folio-img {
@@ -749,6 +897,8 @@ body {
     background-color: rgb(39,38,43);
     text-align: center;
     margin: 0px;
+    padding: 100px 0px 0px 0px;
+
 }
 
 .further .further-text {
@@ -794,7 +944,7 @@ body {
     color: snow;
     text-align: center;
     font-size: 20px;
-    padding: 40px 40px 150px 40px;
+    padding: 40px 40px 100px 40px;
     margin: 0px;
 }
 
