--- a/Sub-Categorys/ProductPage.css
+++ b/Sub-Categorys/ProductPage.css
@@ -1,20 +1,24 @@
-
 /* || Loding Screen */
 
 #loader-wrapper {
+    -webkit-transition: left 10s ease;
+  transition: left 10s ease;
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    
+
     background-color: #e63946;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: opacity 3s ease-out;
-    z-index: 1
-}
+    z-index: 500
+ 
+
+} 
+
+
 .loader {
     display: inline-block;
     width: 30px;
@@ -23,6 +27,7 @@
     border: 4px solid #Fff;
     animation: loader 2s infinite ease;
 }
+
 .loader-inner {
     vertical-align: top;
     display: inline-block;
@@ -30,20 +35,51 @@
     background-color: #fff;
     animation: loader-inner 2s infinite ease-in;
 }
+
 @keyframes loader {
-    0% {transform: rotate(0deg)}
-    25% {transform: rotate(180deg)}
-    50% {transform: rotate(180deg)}
-    75% {transform: rotate(360deg)}
-    100% {transform:  rotate(360deg)}
+    0% {
+        transform: rotate(0deg)
+    }
+
+    25% {
+        transform: rotate(180deg)
+    }
+
+    50% {
+        transform: rotate(180deg)
+    }
+
+    75% {
+        transform: rotate(360deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
 }
+
 @keyframes loader-inner {
-    0% {height: 0%}
-    25% { height: 0%;}
-    50% { height: 100%;}
-    75% { height: 100%;}
-    100% { height: 0%;}
+    0% {
+        height: 0%
+    }
+
+    25% {
+        height: 0%;
+    }
+
+    50% {
+        height: 100%;
+    }
+
+    75% {
+        height: 100%;
+    }
+
+    100% {
+        height: 0%;
+    }
 }
+
 #myDiv {
     display: none;
 }
@@ -61,8 +97,8 @@ html {
 }
 
 body {
-    margin: 0px;  
-    font-family: Montserrat,sans-serif;
+    margin: 0px;
+    font-family: Montserrat, sans-serif;
     padding: 0px;
     overflow-x: hidden;
 }
@@ -76,19 +112,20 @@ body {
     padding-left: 300px;
     padding-right: 300px;
 }
+
 .section {
     display: block;
 }
 
 @media screen and (max-width: 880px) {
-    .intro-container  {
+    .intro-container {
         padding-left: 30px;
         padding-right: 30px;
     }
 }
 
 @media screen and (max-width: 880px) {
-    .container  {
+    .container {
         padding-left: 30px;
         padding-right: 30px;
     }
@@ -98,7 +135,7 @@ body {
 
 
 .topnav {
-     overflow: hidden;
+    overflow: hidden;
     background-color: snow;
     position: fixed;
     top: 0;
@@ -109,7 +146,7 @@ body {
 }
 
 .topnav a {
-     border-bottom: solid 3px snow;
+    border-bottom: solid 3px snow;
     float: right;
     display: block;
     color: grey;
@@ -140,79 +177,180 @@ body {
     width: 220px;
     margin: 10px;
     padding: 0 10px;
-    
 
 
 
-}
-@media screen and (max-width: 880px) {
-  .topnav a:not(:first-child) {
-    display: none;
-    color: snow;
-    border-top: solid 2px rgb(252, 53, 101);
-    border: none;
-  }
 
-  .topnav a.icon {
-      float: right;
-    display: block;
-    color: grey;
-    border: none;
-  }
 }
 
 @media screen and (max-width: 880px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color: snow;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-    background-color: rgb(42, 40, 46);
-  }
+    .topnav a:not(:first-child) {
+        display: none;
+        color: snow;
+        border-top: solid 2px rgb(252, 53, 101);
+        border: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+        color: grey;
+        border: none;
+    }
 }
+
+@media screen and (max-width: 880px) {
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+        background-color: snow;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+        background-color: rgb(42, 40, 46);
+    }
+}
+
 /* || Landing Page */
 
 .header {
     text-align: center;
-    background-image: url(/Images/Sub_Categorys/Networking/Rasberry_Pi_Web_Server/Rasberry.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
 }
+
 .header .header-overlay {
     text-align: left;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.6); 
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.6);
     background-color: cover;
 
 }
+
 .header .header-overlay .header-text {
     padding: 300px 0px 300px;
     color: snow;
 }
+
 .header-text-1 {
     font-size: 25px;
     margin: 0px;
-    
-    color: rgb(252,53,101);
-    
+    color: rgb(252, 53, 101);
+    opacity: 0.0;
+    -webkit-animation: fadeInDown 0.7s;
+    -moz-animation: fadeInDown 0.7s;
+    /* Firefox < 16 */
+    -ms-animation: fadeInDown 0.7s;
+    /* Internet Explorer */
+    -o-animation: fadeInDown 0.7s;
+    /* Opera < 12.1 */
+    animation: fadeInDown 0.7s;
+    animation-fill-mode: both;
+
 }
+
 .header-text-2 {
     font-size: 80px;
     margin: 0px;
     font-weight: bold;
+    -webkit-animation: fadeInDown 0.7s;
+    -moz-animation: fadeInDown 0.7s;
+    /* Firefox < 16 */
+    -ms-animation: fadeInDown 0.7s;
+    /* Internet Explorer */
+    -o-animation: fadeInDown 0.7s;
+    /* Opera < 12.1 */
+    animation: fadeInDown 0.7s;
+    animation-fill-mode: both;
 }
+
+@keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-40px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-moz-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-webkit-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-o-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-ms-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
 .header-text-3 {
     font-size: 25px;
     margin: 0px;
-    color: rgb(252,53,101)
+    color: rgb(252, 53, 101);
+    -webkit-animation: fadeInUp 0.7s;
+    -moz-animation: fadeInUp 0.7s;
+    /* Firefox < 16 */
+    -ms-animation: fadeInUp 0.7s;
+    /* Internet Explorer */
+    -o-animation: fadeInUp 0.7s;
+    /* Opera < 12.1 */
+    animation: fadeInUp 0.7s;
+    animation-fill-mode: both;
 }
 
 
@@ -231,13 +369,23 @@ body {
     margin-top: 20px;
     margin-right: 10px;
     transition: border 0.7s ease;
-    box-shadow:  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-                  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-                  0 12.5px 10px rgba(0, 0, 0, 0.06),
-                  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-                  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-                  0 100px 80px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
+    -webkit-animation: fadeInUp 0.7s;
+    -moz-animation: fadeInUp 0.7s;
+    /* Firefox < 16 */
+    -ms-animation: fadeInUp 0.7s;
+    /* Internet Explorer */
+    -o-animation: fadeInUp 0.7s;
+    /* Opera < 12.1 */
+    animation: fadeInUp 0.7s;
+    animation-fill-mode: both;
 }
+
 .header .header-overlay .header-text .header-btn:hover {
     background-color: rgb(252, 53, 101);
     border: 2px solid rgb(252, 53, 101);
@@ -248,20 +396,83 @@ body {
     transition: background-color 0.7s ease-out;
 }
 
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(40px)
+    }
 
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-moz-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+@-webkit-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-o-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
+
+
+@-ms-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px)
+    }
+}
 
 
 
 @media screen and (max-width: 880px) {
-    .header-text-1, .header-text-3 {
+
+    .header-text-1,
+    .header-text-3 {
         font-size: 20px;
-        text-align: left ;
+        text-align: left;
     }
 }
+
 @media screen and (max-width: 880px) {
     .header-text-2 {
         font-size: 50px;
-        
+
     }
 }
 
@@ -269,16 +480,19 @@ body {
 /* || SVG Curve */
 #curve {
     width: 100%;
-    margin-bottom: -10px ;
+    margin-bottom: -10px;
 }
+
 #curve path {
     fill: white;
 }
+
 #curve1 {
     width: 100%;
-    transform: rotate(180deg); 
+    transform: rotate(180deg);
     margin: -10;
 }
+
 #curve1 path {
     fill: white;
 }
@@ -286,7 +500,8 @@ body {
 
 /* || Intro */
 .article {
-    padding-bottom: 80px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
 /* ||| Header */
@@ -295,7 +510,7 @@ body {
     font-weight: 900;
     font-size: 2.125em;
     line-height: 1.12;
-    margin: 0px 0px 60px;
+    margin: 0px 0px 0px;
     color: rgb(0.0.0.0);
 }
 
@@ -304,16 +519,16 @@ body {
     font-size: 0.5em;
     line-height: 1.12;
     margin: 10px 0px 15px;
-    color:  rgb(252,53,101);
+    color: rgb(252, 53, 101);
 }
 
 .intro-header .intro-byline {
-    color:  black;
+    color: black;
     font-size: 0.25em
 }
 
 .intro-header .intro-solid {
-    border: 2px solid rgb(252,53,101);
+    border: 2px solid rgb(252, 53, 101);
     width: 700px;
     float: left;
     margin-top: 5px;
@@ -325,6 +540,7 @@ body {
     display: table;
     border-spacing: 0;
 
+
 }
 
 .intro-row .intro-column-left {
@@ -333,60 +549,66 @@ body {
     text-align: left;
     padding: 0px 80px 0px 0px;
     vertical-align: top;
-  
+
 }
 
 .intro-row .intro-column-right {
     width: 50%;
     display: table-cell;
+    vertical-align: middle;
 
 }
-.intro-content .intro-row .intro-column-left  .intro-column-header {
-    color: rgb(252,53,101);
+
+.intro-content .intro-row .intro-column-left .intro-column-header {
+    color: rgb(252, 53, 101);
     margin: 0px
 }
+
 .intro-content .intro-row .intro-column-left .intro-column-header .intro-column-line {
-    border: 1px solid rgb(252,53,101);
+    border: 1px solid rgb(252, 53, 101);
     width: 200px;
     float: left;
 }
+
 .intro-content .intro-row .intro-column-left .intro-list {
-    color: rgb(252,53,101);
+    color: rgb(252, 53, 101);
 }
 
 .intro-content .intro-row .intro-column-right .intro-vid {
     position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
-    box-shadow:  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-                  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-                  0 12.5px 10px rgba(0, 0, 0, 0.06),
-                  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-                  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-                  0 100px 80px rgba(0, 0, 0, 0.12);
-    
-    
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
+
+
 
 }
 
- .intro-content .intro-row .intro-column-right .intro-vid .intro-vid-iframe {
-  position: absolute;
+.intro-content .intro-row .intro-column-right .intro-vid .intro-vid-iframe {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-     
+
 }
 
 @media screen and (max-width:880px) {
-     .intro-row  {
-        display: grid     
+    .intro-row {
+        display: grid
     }
-    
+
     .intro-row .intro-column-left {
         width: 100%;
         padding: 0px;
     }
+
     .intro-row .intro-column-right {
         width: 100%;
         margin-top: 20;
@@ -416,21 +638,22 @@ body {
     background-color: rgba(0, 0, 0, 0.4);
     background-size: cover;
     padding-top: 100px;
-    padding-bottom: 100px 
+    padding-bottom: 100px
 }
 
 .con-how .con-overlay .con-con-header {
-    color: rgb(252,53,101);
+    color: rgb(252, 53, 101);
     margin: 0px
 }
+
 .con-how .con-overlay .con-con-header .con-con-line {
-    border: 1px solid rgb(252,53,101);
+    border: 1px solid rgb(252, 53, 101);
     width: 200px;
     float: left;
 }
 
 .con-line {
-    border: 1px solid rgb(252,53,101);
+    border: 1px solid rgb(252, 53, 101);
     text-align: left;
     margin-top: 20px;
 }
@@ -460,16 +683,18 @@ body {
     width: 50%;
     text-align: center;
 }
+
 .con-media .con-row .con-column-right .con-vid {
     position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
-         box-shadow:  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-                  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-                  0 12.5px 10px rgba(0, 0, 0, 0.06),
-                  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-                  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-                  0 100px 80px rgba(0, 0, 0, 0.12);
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 .con-media .con-row .con-column-right .con-vid .con-vid-iframe {
@@ -482,21 +707,23 @@ body {
 
 @media screen and (max-width:880px) {
     .con-media .con-row {
-        display: grid;    
+        display: grid;
     }
+
     .con-media .con-row .con-column-left {
         width: 100%;
         padding: 0px;
-        
+
     }
+
     .con-media .con-row .con-column-right {
         width: 100%;
         padding: 10px 0px 0px 0px;
-        
+
     }
-    
-    
-    
+
+
+
 }
 
 
@@ -506,22 +733,22 @@ body {
     padding: 5px;
     background-color: darkred;
     border-radius: 10px;
-    color: white; 
+    color: white;
 }
 
 /* ||| Quote */
 
 
 
-.con-quote{
+.con-quote {
     font-weight: 900;
-    color: rgb(252,53,101);
+    color: rgb(252, 53, 101);
     text-align: left;
     font-size: 1.4em;
 }
 
 .con-how .con-overlay .con-quote .con-solid {
-    border: 1px solid rgb(252,53,101);
+    border: 1px solid rgb(252, 53, 101);
     text-align: left;
 
 }
@@ -544,23 +771,24 @@ body {
 
 }
 
-.con-how .con-overlay .con-end-vid  {
+.con-how .con-overlay .con-end-vid {
     position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
-    box-shadow:  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-                  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-                  0 12.5px 10px rgba(0, 0, 0, 0.06),
-                  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-                  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-                  0 100px 80px rgba(0, 0, 0, 0.12);
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 /* || Seperator */
 
 .seperator {
-    background-color: rgb(39,38,43);
-    padding: 25px; 
+    background-color: rgb(39, 38, 43);
+    padding: 25px;
 }
 
 /* || Footer */
